@@ -33,7 +33,7 @@ rem   JMETER_HOME - installation directory. Will be guessed from location of jme
 rem
 rem   JM_LAUNCH   - java.exe (default) or javaw.exe
 rem
-rem   JM_START    - set this to "start" to launch JMeter in a separate window
+rem   JM_START    - set this to 'start ""' to launch JMeter in a separate window
 rem                 this is used by the jmeterw.cmd script.
 rem
 rem   JVM_ARGS    - (Optional) Java options used when starting JMeter, e.g. -Dprop=val
@@ -57,6 +57,8 @@ if exist "%JMETER_HOME%\bin\jmeter.bat" goto okHome
 cd ..
 set "JMETER_HOME=%cd%"
 cd "%CURRENT_DIR%"
+if exist "%JMETER_HOME%\bin\jmeter.bat" goto okHome
+set "JMETER_HOME=%~dp0\.."
 :gotHome
 
 if exist "%JMETER_HOME%\bin\jmeter.bat" goto okHome
@@ -78,7 +80,7 @@ rem Minimal version to run JMeter
 set MINIMAL_VERSION=1.8.0
 
 
-rem --add-modules java.activation if JAVA 9
+rem --add-opens if JAVA 9
 set JAVA9_OPTS=
 
 
@@ -106,7 +108,7 @@ IF "%JAVAVER:~1,2%"=="1." (
 ) else (
     rem Java 9 at least
     set current_minor=9
-    set JAVA9_OPTS=--add-modules java.activation --add-opens java.desktop/sun.awt=ALL-UNNAMED --add-opens java.desktop/sun.swing=ALL-UNNAMED --add-opens java.desktop/javax.swing.text.html=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED
+    set JAVA9_OPTS=--add-opens java.desktop/sun.awt=ALL-UNNAMED --add-opens java.desktop/sun.swing=ALL-UNNAMED --add-opens java.desktop/javax.swing.text.html=ALL-UNNAMED --add-opens java.desktop/java.awt=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED
 )
 
 
@@ -126,10 +128,14 @@ if %current_minor% LSS %minimal_minor% (
     goto pause
 )
 
-if .%JM_LAUNCH% == . set JM_LAUNCH=java.exe
+if not defined JM_LAUNCH (
+    set JM_LAUNCH=java.exe
+)
 
 if exist jmeter.bat goto winNT1
-if .%JMETER_BIN% == . set JMETER_BIN=%~dp0
+if not defined JMETER_BIN (
+    set JMETER_BIN=%~dp0
+)
 
 :winNT1
 rem On NT/2K grab all arguments at once
@@ -186,7 +192,11 @@ if not defined JMETER_COMPLETE_ARGS (
     set ARGS=
 )
 
-%JM_START% %JM_LAUNCH% %ARGS% %JVM_ARGS% -jar "%JMETER_BIN%ApacheJMeter.jar" %JMETER_CMD_LINE_ARGS%
+if "%JM_START%" == "start" (
+    set JM_START=start "Apache_JMeter"
+)
+
+%JM_START% "%JM_LAUNCH%" %ARGS% %JVM_ARGS% -jar "%JMETER_BIN%ApacheJMeter.jar" %JMETER_CMD_LINE_ARGS%
 
 rem If the errorlevel is not zero, then display it and pause
 
